--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="d-flex pagination justify-content-center mt-3">
             <div ><a class="page-link text-secondary" href="index.html">
                 <i class="fas fa-th"></i></a></div>
-            <div ><a class="page-link text-secondary" href="muro.html">■</a></div>
+            <div ><a class="page-link text-secondary" href="post.html">■</a></div>
         </div>
     </div>
     <div>
@@ -61,22 +61,33 @@
     </div>
         <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div> 
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3 class="modal-title fs-5" id="exampleModalLabel">Create a new post</h3>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <div class="form-floating">
+                    <label for="floatingTextarea">Caption:</label>
+                    <textarea class="form-control" placeholder="Add the caption of your post here" id="floatingTextarea"></textarea>
+                  </div>
+                 <div>
+                  <button type="button" class="btn btn-light btn-sm">
+                    <i class="fas fa-camera"></i>
+                </button>
+                <button type="button" class="btn btn-light btn-sm">
+                    <i class="fas fa-map-marker-alt"></i>
+                </button>
+                 </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-success">Publish</button>
+                </div>
+              </div>
+            </div>
+          </div> 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/ca96b2d104.js" crossorigin="anonymous"></script>
