--- a/post.html
+++ b/post.html
@@ -97,15 +97,26 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+          <h3 class="modal-title fs-5" id="exampleModalLabel">Create a new post</h3>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          ...
+          <div class="form-floating">
+            <label for="floatingTextarea">Caption:</label>
+            <textarea class="form-control" placeholder="Add the caption of your post here" id="floatingTextarea"></textarea>
+          </div>
+         <div>
+          <button type="button" class="btn btn-light btn-sm">
+            <i class="fas fa-camera"></i>
+        </button>
+        <button type="button" class="btn btn-light btn-sm">
+            <i class="fas fa-map-marker-alt"></i>
+        </button>
+         </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-success">Publish</button>
         </div>
       </div>
     </div>
